temp/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
  namespace: pr-00
  labels:
    app: posts-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: main-service
          image: 'saifaldin3388/someapp:pr-00-00'
          command: ['node']
          args: ['index.js']
          ports:
            - name: web
              containerPort: 3000
              protocol: TCP
        - name: mock-service
          image: 'm3ntorshipci/prism:latest'
          args:
            [
              'mock',
              '-d',
              '-h',
              '0.0.0.0',
              'https://raw.githubusercontent.com/m3ntorship/backend-nestjs-template/ci-cd/openapi/example.openapi.yml',
            ]
          ports:
            - name: web
              containerPort: 4010
              protocol: TCP
