temp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pickify-posts
  namespace: pr-00
spec:
  selector:
    app: posts
  ports:
    - name: main-service
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: mock-service
      protocol: TCP
      port: 81
      targetPort: 4010
